<resources>
    <string name="app_name">neakriti</string>
    <string name="app_logo" translatable="false">neakriti Logo</string>
    <string name="title_article_detail">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">neakriti news agency</string>
    <string name="nav_header_subtitle" translatable="false">info@neakriti.gr</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="transition_photo" translatable="false">transition_photo</string>
    <string name="row_thumb_description" translatable="false">Article Thumbnail</string>
    <string name="detail_img_description" translatable="false">Article Image</string>
    <string name="nav_home">Home</string>
    <string name="nav_home_id" translatable="false">127</string>
    <string name="nav_crete">Crete</string>
    <string name="nav_crete_id" translatable="false">95</string>
    <string name="nav_views">Opinions</string>
    <string name="nav_views_id" translatable="false">322</string>
    <string name="nav_economy">Economy</string>
    <string name="nav_economy_id" translatable="false">159</string>
    <string name="nav_culture">Culture</string>
    <string name="nav_culture_id" translatable="false">116</string>
    <string name="nav_pioneering">Innovation</string>
    <string name="nav_pioneering_id" translatable="false">131</string>
    <string name="nav_sports">Sports</string>
    <string name="nav_sports_id" translatable="false">225</string>
    <string name="nav_lifestyle">Lifestyle</string>
    <string name="nav_lifestyle_id" translatable="false">323</string>
    <string name="nav_health">Health</string>
    <string name="nav_health_id" translatable="false">115</string>
    <string name="nav_woman">Woman</string>
    <string name="nav_woman_id" translatable="false">128</string>
    <string name="nav_travel">Trips</string>
    <string name="nav_travel_id" translatable="false">263</string>
    <string name="nav_favorite_items">Bookmarks</string>
    <string name="admob_appid"      translatable="false">ca-app-pub-3940256099942544~6300978111</string>
    <string name="admob_bannerid"   translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="share_the_article">neakriti.gr - Share this Article</string>
    <string name="dlg_no_wifi_detected_title">Do you wish to continue making use of your mobile data plan?</string>
    <string name="dlg_no_wifi_detected_body">Do you wish to continue making use of your mobile data plan?</string>
    <string name="radio_notifier_title" translatable="false">Radio 984</string>
    <string name="radio_notifier_content_text">Live Streaming…</string>
    <string name="live_streaming" translatable="false">Live Streaming</string>
    <string name="btn_tv_play" translatable="false">Play</string>
    <string name="btn_tv_pause" translatable="false">Pause</string>
    <string name="btn_stream_tv" translatable="false">ΚΡΗΤΗ-TV - Live Streaming</string>
    <string name="btn_stream_radio" translatable="false">Radio-984 - Live Streaming</string>
    <string name="dlg_radio_playing_title">Radio is already active</string>
    <string name="dlg_radio_playing_body">To watch TV, the Radio should be first turned off. Do you want to continue?</string>
    <string name="dlg_continue">Continue</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_close">Close</string>
    <string name="dlg_exit">Exit</string>
    <string name="dlg_install">Install</string>
    <string name="dlg_no_network_title">No Network found</string>
    <string name="dlg_no_network_body">Do you wish to continue in Offline Mode?</string>
    <string name="dlg_no_network_stream_body">You cannot make use of live TV or Radio streaming without connection to the internet.</string>
    <string name="dlg_no_network_offline_mode" translatable="false">Offline Mode</string>
    <string name="dlg_no_tts_lang_installed_title">Greek Language Installation</string>
    <string name="dlg_no_tts_lang_installed_body">To use Text-To-Speech (TTS) you need to install the Greek Language Data.\n\nFrom the available languages select Greek(Greece)"</string>
    <string name="dlg_no_tts_lang_unavailable_title">Language Not Available</string>
    <string name="dlg_no_tts_lang_unavailable_body">The Greek language is not available.\n\nPlease check accessibility settings for Greek in your TTS engine or change to Google Engine and choose Greek</string>
    <string name="dlg_no_tts_no_google_tts_engine_body">The Greek language is not available for your TTS Engine.\n\nPlease Switch to the Google TTS Engine at your device and try again</string>
    <string name="dlg_server_down_title">The News Server didn\'t Respond</string>
    <string name="dlg_server_down_body">The News Server failed to respond and the application didn\'t receive data.\n\nThis is not an application problem, but a server problem.\n\nPlease try again later.</string>
    <string name="snack_bookmark_article_added">Bookmark Added: Article stored for later reading</string>
    <string name="snack_bookmark_article_removed">Bookmark Removed: Article removed from bookmarks</string>
    <string name="widget_no_news_to_display">There are no articles to display</string>
    <string name="widget_reload">Reload</string>
    <string name="widget_settings">Settings</string>
    <string name="widget_experimental">ΑΤΤΕΝΤΙΟΝ: Widget control is experimental. Please use it accordingly until further notice.</string>
    <string name="detail_menu_tts" translatable="false">Text to Speech (TTS)</string>
    <string name="detail_menu_sharing" translatable="false">Sharing</string>
    <string name="detail_menu_bookmark" translatable="false">Bookmark</string>
    <string name="detail_menu_browser">Open Article in Browser</string>
    <string name="detail_menu_quick_settings">Quick Settings</string>
    <string name="title_activity_widget_config">Widget Settings</string>
    <string name="pref_news_categories">News Categories</string>
    <string name="pref_news_categories_selector">Available News Categories</string>
    <string name="pref_news_categories_home_hiding_unavailable">You cannot hide the default category</string>
    <string name="pref_detail_screen_details_key" translatable="false">categorydetail</string>
    <string name="pref_increased_line_distance_key" translatable="false">largelinespace</string>
    <string name="pref_increased_line_distance_title">Greater Distance between Lines</string>
    <string name="pref_increased_line_distance_summary">Increases the deistance between lines by half a line to make long articles reading easier.</string>
    <string name="pref_increased_line_distance_title_short">Large Line Gap</string>
    <string name="pref_night_reading_key" translatable="false">nightmode</string>
    <string name="pref_font_size_key" translatable="false">preffontsize_pbar</string>
    <string name="pref_font_size_summary">It allows you to choose how big the characters on the text will appear inside the article detail screen</string>
    <string name="pref_fcm_category_key" translatable="false">cat_notifications</string>
    <string name="pref_test_mode_key" translatable="false">pref_test_mode</string>
    <string name="pref_fcm_key" translatable="false">pref_notifications</string>
    <string name="pref_fcm_test_key" translatable="false">pref_test_notifications</string>
    <string name="pref_fcm_title">Receive News Notifications</string>
    <string name="pref_fcm_test_title">Receive Test Notifications</string>
    <string name="pref_fcm_summary">Here you can enable or disable the News Notifications Functionality for your device regarding the breaking news</string>
    <string name="pref_fcm_test_summary">Debugger Module: Enable/Disable Test Notifications</string>
    <string name="pref_loc_category_key" translatable="false">cat_localization</string>
    <string name="pref_loc_category_title">System Language</string>
    <string name="pref_app_loc_lang_key" translatable="false">list_loc_lang</string>
    <string name="pref_app_loc_lang_title">Display application menus and messages language in</string>
    <string name="loc_greek" translatable="false">Ελληνικά (Greek)</string>
    <string name="loc_english" translatable="false">English (Αγγλικά)</string>
    <string name="loc_greek_id" translatable="false">el</string>
    <string name="loc_english_id" translatable="false">en</string>
    <string name="dlg_restart_title">Restart Required</string>
    <string name="dlg_restart_body">For the language to change to take effect you need to restart the application.\n\nPress CLOSE to restart the application</string>
    <string name="dlg_restart_close">CLOSE</string>
    <string name="pref_about_category_title">About</string>
    <string name="pref_about_version_key" translatable="false">version</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_about_author_title">Author</string>
    <string name="pref_about_author_summary">Ioannis Anifantakis\nhttps://anifantakis.eu</string>
    <string name="pref_about_author_url" translatable="false">https://anifantakis.eu</string>
    <string name="pref_widget_items_count_title">Articles Quantity in Widget</string>
    <string name="pref_detail_screen_details_title">Selected Article Screen</string>
    <string name="pref_night_reading_title">Night Reading</string>
    <string name="pref_night_reading_summary">Dark Theme for esier reading without ambient light during night time</string>
    <string name="pref_font_size_title">Font Size</string>
    <string name="pref_fcm_category_title">Automatic News Notifications</string>
    <string name="pref_widget_category_title">Widget Category</string>
    <string name="prefs_widget_category_order" translatable="false">prefs_widget_category_order</string>
    <string name="prefs_widget_category_id" translatable="false">prefs_widget_category_id</string>
    <string name="prefs_widget_section">WIDGET (Experimental - Beta)</string>
    <string name="prefs_widget_category_title" translatable="false">prefs_widget_category_title</string>
    <string name="prefs_widget_category_items" translatable="false">prefs_widget_category_items</string>
    <string name="pref_list_article_row_appearance" translatable="false">list_article_row_appearance</string>
    <string name="pref_list_article_row_appearance_title">Display Articles as</string>
    <string name="row_type_list">List</string>
    <string name="row_type_list_details">List with details</string>
    <string name="row_type_card">Card</string>
    <string name="row_type_list_id" translatable="false">1</string>
    <string name="row_type_list_details_id" translatable="false">2</string>
    <string name="row_type_card_id" translatable="false">3</string>
    <string name="notif_channel_news_id" translatable="false">news-channel</string>
    <string name="notif_channel_news_name" translatable="false">News Articles</string>
    <string name="notif_channel_external_id" translatable="false">external-links-channel</string>
    <string name="notif_channel_external_name" translatable="false">Website Articles and Links</string>
    <string name="notif_channel_radio_id" translatable="false">radio-channel</string>
    <string name="notif_channel_radio_name" translatable="false">Radio Player Notification</string>
    <string name="three" translatable="false">3</string>
    <string name="five" translatable="false">5</string>
    <string name="seven" translatable="false">7</string>
    <string name="ten" translatable="false">10</string>
    <string name="analytics_art_on_broser" translatable="false">art_on_broser</string>
</resources>