<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_crete"
            android:icon="@drawable/map_marker"
            android:title="@string/nav_crete" />
        <item
            android:id="@+id/nav_views"
            android:icon="@drawable/message_text"
            android:title="@string/nav_views" />
        <item
            android:id="@+id/nav_economy"
            android:icon="@drawable/currency_eur"
            android:title="@string/nav_economy" />
        <item
            android:id="@+id/nav_culture"
            android:icon="@drawable/school"
            android:title="@string/nav_culture" />
        <item
            android:id="@+id/nav_pioneering"
            android:icon="@drawable/satellite_variant"
            android:title="@string/nav_pioneering" />
        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/soccer"
            android:title="@string/nav_sports" />
        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/tie"
            android:title="@string/nav_lifestyle" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/hospital"
            android:title="@string/nav_health" />
        <item
            android:id="@+id/nav_woman"
            android:icon="@drawable/gender_female"
            android:title="@string/nav_woman" />
        <item
            android:id="@+id/nav_travel"
            android:icon="@drawable/wallet_travel"
            android:title="@string/nav_travel" />

        <item
            android:id="@+id/nav_favorite_items"
            android:icon="@drawable/bookmark_outline_48px"
            android:title="@string/nav_favorite_items" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
