<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_tts"
        android:icon="@drawable/baseline_headset_24px"
        android:title="@string/detail_menu_tts"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/nav_share_article"
        android:icon="@drawable/baseline_share_24px"
        android:title="@string/detail_menu_sharing"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/bookmark_outline_wh_48px"
        android:title="@string/detail_menu_bookmark"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />
</menu>